# Contract-Agent

./: .env.example  .gitignore  README.md  SETUP.md  app.py  pyproject.toml  requirements.txt  run_agent.py  vercel.json
api/: index.py
samples/: test_contract.txt
src/contract_agent/: liability_extraction.py  llm_reasoning.py  output.py  red_flag_detection.py  risk_scoring.py  rules.py  structuring.py
static/css/: style.css
static/js/: app.js
templates/: index.html
tests/: test_agents.py
