[tool.poetry]
name = "contract-agent"
version = "0.1.0"
description = "Contract intelligence system with multi-agent architecture."
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
