[project]
name = "contract-agent"
version = "0.1.0"
description = "Contract intelligence system with multi-agent architecture."
dependencies = [
    "Flask==3.0.0",
    "PyPDF2==3.0.0",
    "python-docx==0.8.11",
    "Werkzeug==3.0.0",
    "gunicorn==20.1.0"
]

[tool.poetry]
name = "contract-agent"
version = "0.1.0"
description = "Contract intelligence system with multi-agent architecture."
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.0"
PyPDF2 = "^4.0.0"
python-docx = "^0.8.11"
werkzeug = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
